compiler/testData/diagnostics/tests/enum/AbstractEnum.kt
package abstract

<!WRONG_MODIFIER_TARGET!>abstract<!> enum class MyAbstractEnum() {}